--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,6 +8,9 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 1.5em;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .nav-title {
